Fix ovewflow on mobile device

--- a/css/main.css
+++ b/css/main.css
@@ -29,21 +29,26 @@ body {
   justify-content: space-between;
   background-image: linear-gradient(-180deg, rgba(0,0,0,0.00) 0%, rgba(0,0,0,0.35) 50%);
   width:100%;
+  height: 100vh;
+  width: 100vw;
 }
 
 
 /* HEADER */
 .page__header {
-  margin: 0 30px;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: flex-end;
-  margin-top:30px;
+  position: relative;
 }
 .nav-trigger {
   background-color: transparent;
   border:1px solid transparent;
   position: absolute;
   cursor: pointer;
+  margin-top: 10px;
+  padding-right: 10px;
 }
 
 .nav-trigger__img {
@@ -69,6 +74,8 @@ body {
   top:0;
   width:100%;
   z-index:3;
+  height: 100vh;
+  width: 100vw;
 }
 
 .nav__items {
@@ -128,13 +135,14 @@ body {
   max-width: 150px;
   font-size: 30px;
   text-transform: uppercase;
+  padding-bottom: 170px;
 }
 
 
 /* FOOTER */
 .page__footer {
   margin: 0 30px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
 }
 
 .page__footer-copy {
@@ -154,6 +162,15 @@ body {
 }
 
 /* MEDIA QUERIES */
+
+@media(min-width: 320px){
+ .page {
+   overflow: hidden;
+ }
+
+ .nav: {
+   overflow: hidden;
+ }
 
 @media(min-width: 768px){
   .page__header {
